--- a/main.css
+++ b/main.css
@@ -47,7 +47,7 @@ img{
     z-index: 2;
 }
 
-.CodeMirror{
+#editor{
     opacity: 0.85;
     position: absolute;
     top:0;
@@ -57,9 +57,17 @@ img{
     overflow:hidden;
 }
 
-/*#editor>.CodeMirror{*/
-    /*height:100%*/
-/*}*/
+#draggable{
+    background: lightgrey;
+    width:10px;
+    float: left;
+    height:100%;
+    cursor: col-resize;
+}
+
+#editor>.CodeMirror{
+    height:100%
+}
 
 .btn{
     display: block;
