--- a/main.css
+++ b/main.css
@@ -48,11 +48,11 @@ img{
 }
 
 #editor{
-    opacity: 0.85;
+    opacity: 0.9;
     position: absolute;
     top:0;
     right:0;
-    width:700px;
+    width:800px;
     height:100%;
     overflow:hidden;
     z-index:4;
@@ -67,18 +67,29 @@ img{
 }
 
 #editor>.CodeMirror{
-    height:100%
+    height:100%;
 }
 
+#error {
+    width: 100%;
+    height: 30px;
+    background: #ffffec;
+    line-height: 30px;
+    padding: 0 20px;
+}
+
+.modalTitle{
+    font-size: 30px;
+}
 .btn{
-    display: block;
-    margin-left: 20px;
-    background-color: #bdc3c7;
-    color: #fff;
-    padding: 10px 19px;
-    font-size: 17px;
-    line-height: 1.471;
-    border-radius: 6px;
+    display: inline-block;
+    margin-right: 20px;
+    /*background-color: #bdc3c7;*/
+    /*color: #fff;*/
+    /*padding: 10px 19px;*/
+    /*font-size: 17px;*/
+    /*line-height: 1.471;*/
+    /*border-radius: 6px;*/
 }
 
 .btn:hover{
@@ -87,4 +98,23 @@ img{
 
 a:hover, a:active, a:focus {
   outline:0;
+}
+
+a{
+    color:#8cbaed;
+}
+a:hover{
+    color:#8cbaed;
+}
+
+.modal-content{
+    border-radius: 0;
+}
+.modal-body{
+    padding: 20px 35px;
+    padding-top: 40px;
+}
+
+span.modal-close{
+    display: none;
 }
